--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,6 @@
 .cover {
   max-width: 1184px;
-  height: 740px;
+  min-height: 740px;
   margin: 0 auto;
   background-image: url("../../images/cover-trains.jpg");
   background-size: cover;
@@ -10,24 +10,24 @@
 
 @media (max-width: 1024px) {
   .cover {
-    height: 640px;
+    min-height: 640px;
   }
 }
 
 @media (max-width: 768px) {
   .cover {
-    height: 480px;
+    min-height: 480px;
   }
 }
 
 @media (max-width: 520px) {
   .cover {
-    height: 380px;
+    min-height: 380px;
   }
 }
 
 @media (max-width: 320px) {
   .cover {
-    height: 200px;
+    min-height: 200px;
   }
 }
