--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,7 @@
 .cover__subtitle {
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.22;
   text-align: center;
   color: #FFFFFF;
   max-width: 360px;
@@ -12,14 +12,14 @@
 @media (max-width: 520px) {
   .cover__subtitle {
     font-size: 15px;
-    line-height: 17px;
+    line-height: 1.17;
   }
 }
 
 @media (max-width: 320px) {
   .cover__subtitle {
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     padding: 0 16px;
     max-width: 288px;
   }
