--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,22 +1,23 @@
 .footer__link {
   font-size: 16px;
-  line-height: 18px;
+  line-height: 1.12;
   color: #FFFFFF;
   text-decoration: none;
   margin: 0 14px 0 0;
 }
-.footer__link:nth-child(5) {
+.footer__link:last-child {
   margin: 0;
 }
 
 .footer__link:hover {
   opacity: 0.8;
+  transition: .5s;
 }
 
 @media (max-width: 700px) {
   .footer__link {
     margin: 0;
     font-size: 24px;
-    line-height: 24px;
+    line-height: 1;
   }
 }
