--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,18 +1,19 @@
 .header__lang-link {
   color: #ffffff;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 1.17;
   text-decoration: none;
   padding: 18px 0 6px 0;
 }
 
 .header__lang-link:hover {
   opacity: 0.8;
+  transition: 1s;
 }
 
 @media (max-width: 320px) {
   .header__lang-link {
     font-size: 18px;
-    line-height: 14px;
+    line-height: 1.11;
   }
 }
