--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,13 +1,8 @@
 .intro__text {
   font-size: 16px;
-  line-height: 25.3px;
+  line-height: 1.63;
   color: #FFFFFF;
   margin: 0;
   padding: 0 0 33px 0;
 }
 
-@media (max-width: 320px) {
-  .intro__text {
-    line-height: 26px;
-  }
-}
