--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,16 +1,16 @@
 .intro__title {
   font-weight: 900;
   font-size: 54px;
-  line-height: 66px;
+  line-height: 1.07;
   color: #FFFFFF;
   margin: 0;
   padding: 0 0 40px 0;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 425px) {
   .intro__title {
     font-size: 32px;
-    line-height: 37px;
+    line-height: 1.09;
     max-width: 251px;
   }
 }
