--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,7 @@
 .lead__subtitle {
   font-weight: 400;
   font-size: 30px;
-  line-height: 36px;
+  line-height: 1.2;
   text-align: center;
   color: #FFFFFF;
   max-width: 640px;
@@ -18,14 +18,14 @@
 @media (max-width: 490px) {
   .lead__subtitle {
     font-size: 23px;
-    line-height: 27px;
+    line-height: 1.1;
   }
 }
 
 @media (max-width: 320px) {
   .lead__subtitle {
     font-size: 16px;
-    line-height: 20px;
+    line-height: 1.25;
     padding: 0 0 40px 0;
   }
 }
