--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,7 @@
 .lead__title {
   font-weight: 900;
   font-size: 96px;
-  line-height: 100px;
+  line-height: 1.04;
   color: #FFFFFF;
   max-width: 720px;
   text-align: center;
@@ -12,49 +12,43 @@
 @media (max-width: 700px) {
   .lead__title {
     font-size: 70px;
-    line-height: 74px;
+    line-height: 1.1;
   }
 }
 
 @media (max-width: 510px) {
   .lead__title {
     font-size: 65px;
-    line-height: 69px;
   }
 }
 
 @media (max-width: 460px) {
   .lead__title {
     font-size: 60px;
-    line-height: 64px;
   }
 }
 
 @media (max-width: 420px) {
   .lead__title {
     font-size: 55px;
-    line-height: 60px;
   }
 }
 
 @media (max-width: 390px) {
   .lead__title {
     font-size: 50px;
-    line-height: 55px;
   }
 }
 
 @media (max-width: 350px) {
   .lead__title {
     font-size: 45px;
-    line-height: 50px;
   }
 }
 
 @media (max-width: 320px) {
   .lead__title {
     font-size: 40px;
-    line-height: 44px;
     margin: 0 16px;
     padding: 0 0 16px 0;
   }
