--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,17 +1,12 @@
 .lead {
   padding: 56px 0 92px 0;
   max-width: 100%;
+  font-size: 0;
 }
 
 @media (max-width: 1024px) {
   .lead {
     padding: 48px 0 92px 0;
-  }
-}
-
-@media (max-width: 768px) {
-  .lead {
-    padding: 48px 0 88px 0;
   }
 }
 
