--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,34 +1,4 @@
 .photo-grid__item {
-  max-width: 284px;
-  height: 213px;
+  max-width: 100%;
 }
 
-@media (max-width: 1024px) {
-  .photo-grid__item {
-    max-width: 300px;
-    height: 225px;
-
-  }
-}
-
-@media (max-width: 768px) {
-  .photo-grid__item {
-    max-width: 352px;
-    height: 264px;
-  }
-}
-
-@media (max-width: 719px) {
-  .photo-grid__item {
-    max-width: 266px;
-    height: 200px;
-  }
-}
-
-
-@media (max-width: 320px) {
-  .photo-grid__item {
-    max-width: 288px;
-    height: 216px;
-  }
-}
