--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -27,9 +27,7 @@
 
 @media (max-width: 320px) {
   .place__image {
-    max-width: 320px;
-    height: 320px;
-    order: 2;
+    max-height: 320px;
     padding: 0;
   }
 }
