--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,6 +1,6 @@
 .place__paragraph {
   font-size: 18px;
-  line-height: 29px;
+  line-height: 1.63;
   color: #FFFFFF;
   margin: 0;
   max-width: 484px;
@@ -14,7 +14,5 @@
 @media (max-width: 768px) {
   .place__paragraph {
     font-size: 16px;
-    line-height: 26px;
-    padding: 0 0 25px 0;
   }
 }
