--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,7 +1,7 @@
 .place__title {
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
+  line-height: 1.06;
   color: #FFFFFF;
   margin: 0;
   max-width: 460px;
@@ -18,7 +18,7 @@
   .place__title {
     max-width: 330px;
     font-size: 42px;
-    line-height: 46px;
+    line-height: 1.1;
   }
 }
 
@@ -26,7 +26,6 @@
   .place__title {
     max-width: 320px;
     font-size: 32px;
-    line-height: 35px;
     order: -1;
     padding: 0 16px;
     margin: 0;
